hphp/test/quick/fail_86sinit.php.expectf

Fatal error: Class undefined: Z in %s on line 4
array(6) {
  [0]=>
  int(16777217)
  [1]=>
  string(18) "Class undefined: Z"
  [2]=>
  string(%d) "%s"
  [3]=>
  int(4)
  [4]=>
  array(0) {
  }
  [5]=>
  array(3) {
    [0]=>
    array(2) {
      ["file"]=>
      string(%d) "%s"
      ["line"]=>
      int(4)
    }
    [1]=>
    array(4) {
      ["file"]=>
      string(%d) "%s"
      ["line"]=>
      int(12)
      ["function"]=>
      string(4) "test"
      ["args"]=>
      array(0) {
      }
    }
    [2]=>
    array(2) {
      ["function"]=>
      string(23) "entrypoint_fail_86sinit"
      ["args"]=>
      array(0) {
      }
    }
  }
}
